2012-06-28  Niibe Yutaka  <gniibe@fsij.org>

	* test/gnuk.py (gnuk_token): New method: increment_seq.
	(gnuk_token.icc_send_cmd): Handle timeout.
	(gnuk_token.cmd_genkey): New.
	(gnuk_token.cmd_get_public_key): New.

	* test/rsa_keys.py (verify_signature): New.

2012-06-27  Niibe Yutaka  <gniibe@fsij.org>

	* test/features/101_decryption.feature: New.
	* test/features/100_compute_signature.feature: New.

	* src/openpgp-do.c (gpg_do_chks_prvkey): Call flash_do_release before
	flash_do_write.
	(gpg_do_write_prvkey): Bug fix when GC occurs.

	* src/openpgp.c (cmd_change_password): Support resetting to
	factory setting of PW3.

	* src/openpgp-do.c (gpg_do_write_prvkey): Don't reset signagure
	counter here.
	(proc_key_import): But reset here.
	Call ac_reset_* when key is imported.

2012-06-26  Niibe Yutaka  <gniibe@fsij.org>

	* test: New.

2012-06-25  Niibe Yutaka  <gniibe@fsij.org>

	* tool/usb_strings.py: New.

2012-06-22  Niibe Yutaka  <gniibe@fsij.org>

	* tool/stlinkv2.py (stlinkv2.blank_check): Add blank check of
	Flash ROM.

2012-06-21  Niibe Yutaka  <gniibe@fsij.org>

	* tool/asm-thumb/blank_check.S: New.

2012-06-20  Niibe Yutaka  <gniibe@fsij.org>

	ST-Link/V2 flash ROM writer.
	* tool/stlinkv2.py: New.
	* tool/asm-thumb/opt_bytes_write.S: New.
	* tool/asm-thumb/flash_write.S: New.

2012-06-19  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.20.

	* src/usb_desc.c (gnukStringSerial): Updated.

2012-06-18  Niibe Yutaka  <gniibe@fsij.org>

	LED display output change.
	* src/main.c (MAIN_TIMEOUT_INTERVAL): New.
	(LED_TIMEOUT_INTERVAL, etc.): New values.
	(main_mode, display_interaction): Remove.
	(led_inverted, emit_led): New.
	(display_status_code): Use emit_led.
	(led_blink): Use LED_* for SPEC.
	(main, fatal): New LED display output.
	* src/gnuk.h (LED_ONESHOT, LED_TWOSHOTS, LED_SHOW_STATUS)
	(LED_START_COMMAND, LED_FINISH_COMMAND, LED_FATAL): New semantics.
	(main_thread): Remove.
	* src/openpgp-do.c (gpg_do_keygen): Don't touch LED here.